--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,21 +1,74 @@
+
 pipeline {
-  agent any
+    agent any
+
+    environment {
+        ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
+        ANSIBLE_HOST_KEY_CHECKING = 'False'
+    }
 
     stages {
-      stage('Build') {
-          steps {
-              script {
-                  sh 'echo "Building Stage"'
-             }
-          }
-      }
+        stage('Initial Cleanup') {
+            dir("${WORKSPACE}") {
+              deleteDir()
+            }
+        }
 
-      stage('Test') {
-         steps {
-              script {
-                  sh 'echo "Testing Stage"'
-             }
+        stage('Checkout SCM') {
+            steps {
+                git branch: 'main', url: 'https://github.com/GodwinGNS/ansible-config-mgt.git'
+            }
+        }
+
+        stage('Prepare Ansible for Execution') {
+            steps {
+                script {
+                    echo "Workspace is ${WORKSPACE}"
+                    sh 'ls -la ${WORKSPACE}/deploy'
+                    if (fileExists("${ANSIBLE_CONFIG}")) {
+                        sh "sed -i '3 a roles_path=${WORKSPACE}/roles' ${ANSIBLE_CONFIG}"
+                    } else {
+                        error "File ${ANSIBLE_CONFIG} does not exist"
+                    }
+                }
+            }
+        }
+
+        stage('Test SSH Connections') {
+            steps {
+                script {
+                    echo 'test pass'
+                }
+            }
+        }
+
+        stage('Run Ansible Playbook') {
+            steps {
+                sshagent(['private-key']) {
+                   ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml', vaultTmpPath: ''
+                }
           }
-      }
-   }
+        }
+
+        stage('Clean Workspace') {
+            steps {
+                cleanWs(
+                    cleanWhenAborted: true, 
+                    cleanWhenFailure: true, 
+                    cleanWhenNotBuilt: true, 
+                    cleanWhenUnstable: true, 
+                    deleteDirs: true
+                )
+            }
+        }
+       
+        parameters {
+            string(
+                name: 'inventory',
+                defaultValue: 'dev',
+                description: 'This is the inventory file for the environment to deploy configuration'
+            )
+        }
+    }
 }
+
