--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,6 +1,13 @@
-
 pipeline {
     agent any
+
+    parameters {
+        string(
+            name: 'inventory',
+            defaultValue: 'dev',
+            description: 'This is the inventory file for the environment to deploy configuration'
+        )
+    }
 
     environment {
         ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
@@ -9,8 +16,10 @@ pipeline {
 
     stages {
         stage('Initial Cleanup') {
-            dir("${WORKSPACE}") {
-              deleteDir()
+            steps {
+                script {
+                    deleteDir()
+                }
             }
         }
 
@@ -25,7 +34,7 @@ pipeline {
                 script {
                     echo "Workspace is ${WORKSPACE}"
                     sh 'ls -la ${WORKSPACE}/deploy'
-                    if (fileExists("${ANSIBLE_CONFIG}")) {
+                    if (fileExists(ANSIBLE_CONFIG)) {
                         sh "sed -i '3 a roles_path=${WORKSPACE}/roles' ${ANSIBLE_CONFIG}"
                     } else {
                         error "File ${ANSIBLE_CONFIG} does not exist"
@@ -37,7 +46,16 @@ pipeline {
         stage('Test SSH Connections') {
             steps {
                 script {
-                    echo 'test pass'
+                    def hosts = [
+                        [ip: '172.31.118.13', user: 'ec2-user'],
+                        [ip: '172.31.82.43', user: 'ubuntu'],
+                        [ip: '172.31.104.185', user: 'ubuntu']
+                    ]
+                    for (host in hosts) {
+                        sshagent(['private-key']) {
+                            sh "ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/dev.pem ${host.user}@${host.ip} exit"
+                        }
+                    }
                 }
             }
         }
@@ -45,9 +63,18 @@ pipeline {
         stage('Run Ansible Playbook') {
             steps {
                 sshagent(['private-key']) {
-                   ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml', vaultTmpPath: ''
+                   ansiblePlaybook(
+                       become: true,
+                       colorized: true,
+                       credentialsId: 'private-key',
+                       disableHostKeyChecking: true,
+                       installation: 'ansible',
+                       inventory: "inventory/${params.inventory}.yml",
+                       playbook: 'playbooks/site.yml',
+                       vaultTmpPath: ''
+                   )
                 }
-          }
+            }
         }
 
         stage('Clean Workspace') {
@@ -61,8 +88,5 @@ pipeline {
                 )
             }
         }
-       
-  
     }
 }
-
