--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -43,29 +43,29 @@ pipeline {
             }
         }
 
-        stage('Test SSH Connections') {
-            steps {
-                script {
-                    def hosts = [
+        // stage('Test SSH Connections') {
+        //     steps {
+        //         script {
+        //             def hosts = [
                         
-                        [ip: '172.31.253.107', user: 'ec2-user'],
-                        [ip: '172.31.222.48', user: 'ec2-user'],
-                        [ip: '172.31.221.208', user: 'ubuntu']
-                    ]
-                    for (host in hosts) {
-                        sshagent(['private-key']) {
-                            sh "ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/dev.pem ${host.user}@${host.ip} exit"
-                        }
-                    }
-                }
-            }
-        }
+        //                 [ip: '172.31.253.107', user: 'ec2-user'],
+        //                 [ip: '172.31.222.48', user: 'ec2-user'],
+        //                 [ip: '172.31.221.208', user: 'ubuntu']
+        //             ]
+        //             for (host in hosts) {
+        //                 sshagent(['private-key']) {
+        //                     sh "ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/dev.pem ${host.user}@${host.ip} exit"
+        //                 }
+        //             }
+        //         }
+        //     }
+        // }
 
         stage('Run Ansible Playbook') {
             steps {
                 script {
                     echo "Inventory file: ${WORKSPACE}/inventory/dev"
-                    if (fileExists("${WORKSPACE}/inventory/${params.inventory}.yml")) {
+                    if (fileExists("${WORKSPACE}/inventory/dev")) {
                         sshagent(['private-key']) {
                            ansiblePlaybook(
                                become: true,
@@ -73,7 +73,7 @@ pipeline {
                                credentialsId: 'private-key',
                                disableHostKeyChecking: true,
                                installation: 'ansible',
-                               inventory: "inventory/${params.inventory}.yml",
+                               inventory: "inventory/dev",
                                playbook: 'playbooks/site.yml',
                                vaultTmpPath: ''
                            )
