--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,101 +1,57 @@
 pipeline {
-    agent any
+  agent any
 
-    parameters {
-        string(
-            name: 'inventory',
-            defaultValue: 'dev',
-            description: 'This is the inventory file for the environment to deploy configuration'
-        )
+  environment {
+    ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
+    ANSIBLE_HOST_KEY_CHECKING = 'False'
+  }
+
+  parameters {
+    string(name: 'inventory', defaultValue: 'dev', description: 'The inventory file for the environment to deploy configuration')
+  }
+
+  stages {
+    stage("Initial cleanup") {
+      steps {
+        dir("${WORKSPACE}") {
+          deleteDir()
+        }
+      }
     }
 
-    environment {
-        ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
-        ANSIBLE_HOST_KEY_CHECKING = 'False'
+    stage('Checkout SCM') {
+      steps {
+        git branch: 'main', url: 'https://github.com/GodwinGNS/ansible-config-mgt.git'
+      }
     }
 
-    stages {
-        stage('Initial Cleanup') {
-            steps {
-                script {
-                    deleteDir()
-                }
-            }
-        }
-
-        stage('Checkout SCM') {
-            steps {
-                git branch: 'main', url: 'https://github.com/GodwinGNS/ansible-config-mgt.git'
-            }
-        }
-
-        stage('Prepare Ansible for Execution') {
-            steps {
-                script {
-                    echo "Workspace is ${WORKSPACE}"
-                    sh 'ls -la ${WORKSPACE}/deploy'
-                    if (fileExists(ANSIBLE_CONFIG)) {
-                        sh "sed -i '3 a roles_path=${WORKSPACE}/roles' ${ANSIBLE_CONFIG}"
-                    } else {
-                        error "File ${ANSIBLE_CONFIG} does not exist"
-                    }
-                }
-            }
-        }
-
-        // stage('Test SSH Connections') {
-        //     steps {
-        //         script {
-        //             def hosts = [
-                        
-        //                 [ip: '172.31.253.107', user: 'ec2-user'],
-        //                 [ip: '172.31.222.48', user: 'ec2-user'],
-        //                 [ip: '172.31.221.208', user: 'ubuntu']
-        //             ]
-        //             for (host in hosts) {
-        //                 sshagent(['private-key']) {
-        //                     sh "ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/dev.pem ${host.user}@${host.ip} exit"
-        //                 }
-        //             }
-        //         }
-        //     }
-        // }
-
-        stage('Run Ansible Playbook') {
-            steps {
-                script {
-                    echo "Inventory file: ${WORKSPACE}/inventory/dev"
-                    if (fileExists("${WORKSPACE}/inventory/dev")) {
-                        sshagent(['private-key']) {
-                           ansiblePlaybook(
-                               become: true,
-                               colorized: true,
-                               credentialsId: 'private-key',
-                               disableHostKeyChecking: true,
-                               installation: 'ansible',
-                               inventory: "inventory/dev",
-                               playbook: 'playbooks/site.yml',
-                               vaultTmpPath: ''
-                           )
-                        }
-                    } else {
-                        error "Inventory file does not exist: ${WORKSPACE}/inventory/${params.inventory}.yml"
-                    }
-                }
-            }
-        }
-
-        stage('Clean Workspace') {
-            steps {
-                cleanWs(
-                    cleanWhenAborted: true, 
-                    cleanWhenFailure: true, 
-                    cleanWhenNotBuilt: true, 
-                    cleanWhenUnstable: true, 
-                    deleteDirs: true
-                )
-            }
-        }
+    stage('Prepare Ansible For Execution') {
+      steps {
+        sh 'echo ${WORKSPACE}'
+        sh 'sed -i "3 a roles_path=${WORKSPACE}/roles" ${WORKSPACE}/deploy/ansible.cfg'
+      }
     }
+
+    stage('Run Ansible playbook') {
+      steps {
+        sshagent(['private-key']) {
+          ansiblePlaybook(
+            become: true,
+            credentialsId: 'private-key',
+            disableHostKeyChecking: true,
+            installation: 'ansible',
+            inventory: "${WORKSPACE}/inventory/${params.inventory}.yml",
+            playbook: "${WORKSPACE}/playbooks/site.yml",
+            // tags: "${params.ansible_tags}"
+          )
+        }
+      }
+    }
+
+    stage('Clean Workspace after build') {
+      steps {
+        cleanWs(cleanWhenAborted: true, cleanWhenFailure: true, cleanWhenNotBuilt: true, cleanWhenUnstable: true, deleteDirs: true)
+      }
+    }
+  }
 }
-
