--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -33,19 +33,9 @@ pipeline {
     }
 
     stage('Run Ansible playbook') {
-      steps {
-        sshagent(['private-key']) {
-          ansiblePlaybook(
-            become: true,
-            credentialsId: 'private-key',
-            disableHostKeyChecking: true,
-            installation: 'ansible',
-            inventory: "${WORKSPACE}/inventory/${params.inventory}.yml",
-            playbook: "${WORKSPACE}/playbooks/site.yml",
-            // tags: "${params.ansible_tags}"
-          )
-        }
-      }
+        steps {
+           ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev.yml', playbook: 'playbooks/site.yml', vaultTmpPath: ''
+         }
     }
 
     stage('Clean Workspace after build') {
@@ -55,3 +45,5 @@ pipeline {
     }
   }
 }
+
+##
