--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,32 +1,67 @@
 ---
+
+
+---
 - name: Include dynamic variables
-  include_vars: ../dynamic-assignment/env-vars.yml
-  tags:
-    - always
-
-- hosts: webservers
-  name: Webserver assignment
+  hosts: all
+  become: yes
   tasks:
-    - import_playbook: ../static-assignments/uat-webservers.yml
+    - include_vars: ../dynamic-assignments/env-vars.yml
+      tags:
+        - always
 
-- import_playbook: ../static-assignments/db-servers.yml
+ - import_playbook: ../static-assignments/db-servers.yml
+   tags:
+     - db
 
-- import_playbook: ../static-assignments/loadbalancers.yml
-  when: load_balancer_is_required
+ - import_playbook: ../static-assignments/uat-webservers.yml
+   tags:
+     - webserver
 
-  #########################
+ - import_playbook: ../static-assignments/loadbalancers.yml
+   when: load_balancer_is_required
+   tags:
+     - loadbalancer
 
-- hosts: db
-- name: database assignment
-  import_playbook: ../static-assignments/database.yml
+# - import_playbook: ../static-assignments/artifactory.yml
+#   tags:
+#     - artifactory
 
-- hosts: nginx
-- name: nginx assignment
-  import_playbook: ../static-assignments/nginx.yml
+# - import_playbook: ../static-assignments/deployment.yml
+#   tags:
+#    - deployment
 
-- hosts: todo
-- name: Deploy the todo application
-  import_playbook: ../static-assignments/deployment.yml
-# - hosts: artifactory
-# - name: artifactory assignment
-#   import_playbook: ../static-assignments/artifactory.yml
+# - import_playbook: ../static-assignments/sonarqube.yml
+
+# - import_playbook: ../static-assignments/wireshark.yml
+# - name: Include dynamic variables
+#   include_vars: ../dynamic-assignment/env-vars.yml
+#   tags:
+#     - always
+
+# - hosts: webservers
+#   name: Webserver assignment
+#   tasks:
+#     - import_playbook: ../static-assignments/uat-webservers.yml
+
+# - import_playbook: ../static-assignments/db-servers.yml
+
+# - import_playbook: ../static-assignments/loadbalancers.yml
+#   when: load_balancer_is_required
+
+#   #########################
+
+# - hosts: db
+# - name: database assignment
+#   import_playbook: ../static-assignments/database.yml
+
+# - hosts: nginx
+# - name: nginx assignment
+#   import_playbook: ../static-assignments/nginx.yml
+
+# - hosts: todo
+# - name: Deploy the todo application
+#   import_playbook: ../static-assignments/deployment.yml
+# # - hosts: artifactory
+# # - name: artifactory assignment
+# #   import_playbook: ../static-assignments/artifactory.yml
