--- a/roles/mysql/vars/main.yml
+++ b/roles/mysql/vars/main.yml
@@ -1,6 +1,6 @@
 mysql_root_password:
 mysql_databases:
-  - name: db-server
+  - name: db
     encoding: latin1
     collation: latin1_general_ci
 mysql_users:
