--- a/inventory/sit.yml
+++ b/inventory/sit.yml
@@ -1,16 +1,16 @@
 [tooling]
-172.31.157.246 ansible_ssh_user=ec2-user
+172.31.87.80 ansible_ssh_user=ec2-user
 
-# [todo]
-# <SIT-Todo-Web-Server-Private-IP-Address>
 
 [nginx]
-172.31.145.199 ansible_ssh_user=ubuntu
+172.31.26.108 ansible_ssh_user=ubuntu
 
 [db:vars]
-ansible_user=ec2-user
+ansible_user=ubuntu
 ansible_python_interpreter=/usr/bin/python
 
 [db]
-172.31.105.81 ansible_ssh_user=ubuntu 
+172.31.23.137 ansible_ssh_user=ubuntu
 
+[todo]
+172.31.111.1 ansible_ssh_user=ec2-user
