--- a/inventory/sit.yml
+++ b/inventory/sit.yml
@@ -9,8 +9,8 @@
 ansible_user=ubuntu
 ansible_python_interpreter=/usr/bin/python
 
-[db]
-172.31.23.137 ansible_ssh_user=ubuntu
+# [db]
+# 172.31.23.137 ansible_ssh_user=ubuntu
 
 [todo]
-172.31.154.241 ansible_ssh_user=ec2-user
+172.31.114.214 ansible_ssh_user=ec2-user
